syntax = "proto3";

option go_package = "./proto;proto";

service TaskService {
    rpc AddTask (TaskRequest) returns (TaskResponse);
    rpc GetTasks (Empty) returns (TaskListResponse);
}

message TaskRequest {
    string title = 1;
    string description = 2;
}

message TaskResponse {
    string id = 1;
    string title = 2;
    string description = 3;
}

message TaskListResponse {
    repeated TaskResponse tasks = 1;
}

message Empty {}
